fix that TINY ANNOYING white space below the footer yay

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -389,7 +389,7 @@ span{
 
 #footer-wrapper{
   bottom: 0;
-  height: 18.2em;
+  height: auto;
   width: 100%;
 }
 
